Bug 280024 - error in compiling
Summary: error in compiling
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: libqapt (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 281811 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-13 13:30 UTC by Daniele Scasciafratte
Modified: 2011-11-06 21:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele Scasciafratte 2011-08-13 13:30:34 UTC
Version:           unspecified (using KDE 4.6.5) 
OS:                Linux

I use aptosid (debian sid) with kde 4.6.5 and qt 4.7.
i get this error when i try to compiling libqapt...
i have installed all the dependencies

root@aptosidbox:/home/mte90/Desktop/muon/libqapt# cmake ./
-- The C compiler identification is GNU
-- The CXX compiler identification is GNU
-- Check for working C compiler: /usr/bin/gcc
-- Check for working C compiler: /usr/bin/gcc -- works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++
-- Check for working CXX compiler: /usr/bin/c++ -- works
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Looking for Q_WS_X11
-- Looking for Q_WS_X11 - found
-- Looking for Q_WS_WIN
-- Looking for Q_WS_WIN - not found.
-- Looking for Q_WS_QWS
-- Looking for Q_WS_QWS - not found.
-- Looking for Q_WS_MAC
-- Looking for Q_WS_MAC - not found.
-- Found Qt4: /usr/bin/qmake (found version "4.7.3")
-- Found Automoc4: /usr/bin/automoc4
-- checking for module 'polkit-qt-1'
--   found polkit-qt-1, version 0.99.0
-- Found PolkitQt-1: /usr/lib/libpolkit-qt-gui-1.so;/usr/lib/libpolkit-qt-core-1.so;/usr/lib/libpolkit-qt-agent-1.so 
WARNING: Installation prefix does not match PolicyKit install prefixes. You probably will need to move files installed in POLICY_FILES_INSTALL_DIR and by dbus_add_activation_system_service to the /usr prefix
-- Found Xapian: /usr/lib/libxapian.so
-- Found AptPkg: /usr/lib/libapt-pkg.so;/usr/lib/libapt-inst.so 
-- Found QtGStreamer: /usr/include/QtGStreamer 
-- Boost hasn't been found yet. Looking...
-- Boost version: 1.46.1
-- GCC 4.5 or later detected. Enabling C++0x support in QTGSTREAMER_FLAGS.
-- Performing Test __HAVE_GCC_VISIBILITY
-- Performing Test __HAVE_GCC_VISIBILITY - Success
-- Found Qt-Version 4.7.3 (using /usr/bin/qmake)
-- Looking for XOpenDisplay in /usr/lib/x86_64-linux-gnu/libX11.so;/usr/lib/x86_64-linux-gnu/libXext.so;/usr/lib/x86_64-linux-gnu/libXft.so;/usr/lib/x86_64-linux-gnu/libXau.so;/usr/lib/x86_64-linux-gnu/libXdmcp.so
-- Looking for XOpenDisplay in /usr/lib/x86_64-linux-gnu/libX11.so;/usr/lib/x86_64-linux-gnu/libXext.so;/usr/lib/x86_64-linux-gnu/libXft.so;/usr/lib/x86_64-linux-gnu/libXau.so;/usr/lib/x86_64-linux-gnu/libXdmcp.so - found
-- Looking for gethostbyname
-- Looking for gethostbyname - found
-- Looking for connect
-- Looking for connect - found
-- Looking for remove
-- Looking for remove - found
-- Looking for shmat
-- Looking for shmat - found
-- Looking for IceConnectionNumber in ICE
-- Looking for IceConnectionNumber in ICE - found
-- Found X11: /usr/lib/x86_64-linux-gnu/libX11.so
-- Looking for include files CMAKE_HAVE_PTHREAD_H
-- Looking for include files CMAKE_HAVE_PTHREAD_H - found
-- Looking for pthread_create in pthreads
-- Looking for pthread_create in pthreads - not found
-- Looking for pthread_create in pthread
-- Looking for pthread_create in pthread - found
-- Found Threads: TRUE 
-- Looking for _POSIX_TIMERS
-- Looking for _POSIX_TIMERS - found
-- Found Automoc4: /usr/bin/automoc4 
-- Found Perl: /usr/bin/perl 
-- Found Phonon: /usr/include 
-- Performing Test _OFFT_IS_64BIT
-- Performing Test _OFFT_IS_64BIT - Success
-- Performing Test HAVE_FPIE_SUPPORT
-- Performing Test HAVE_FPIE_SUPPORT - Success
-- Performing Test __KDE_HAVE_W_OVERLOADED_VIRTUAL
-- Performing Test __KDE_HAVE_W_OVERLOADED_VIRTUAL - Success
-- Performing Test __KDE_HAVE_GCC_VISIBILITY
-- Performing Test __KDE_HAVE_GCC_VISIBILITY - Success
-- Found KDE 4.6 include dir: /usr/include
-- Found KDE 4.6 library dir: /usr/lib
-- Found the KDE4 kconfig_compiler preprocessor: /usr/bin/kconfig_compiler
-- Found automoc4: /usr/bin/automoc4
-- Found Debconf-KDE: /usr/lib/libdebconf-kde.so
-- 
-----------------------------------------------------------------------------
-- The following external packages were located on your system.
-- This installation will have the extra features provided by these packages.
+ QtGStreamer
Congratulations! All external packages have been found.
-----------------------------------------------------------------------------

-- Configuring done
-- Generating done
-- Build files have been written to: /home/mte90/Desktop/muon/libqapt
root@aptosidbox:/home/mte90/Desktop/muon/libqapt# make
[  2%] Generating workerdbus.cpp, workerdbus.h
[  4%] Generating moc_backend.cxx                                                                                                                                                                          
[  6%] Generating moc_cache.cxx                                                                                                                                                                            
[  8%] Generating moc_config.cxx                                                                                                                                                                           
[ 10%] Generating moc_history.cxx                                                                                                                                                                          
[ 12%] Generating workerdbus.moc                                                                                                                                                                           
Scanning dependencies of target qapt                                                                                                                                                                       
[ 14%] Building CXX object src/CMakeFiles/qapt.dir/backend.o                                                                                                                                               
In file included from /usr/include/xapian/enquire.h:33:0,                                                                                                                                                  
                 from /usr/include/xapian.h:46,
                 from /home/mte90/Desktop/muon/libqapt/src/backend.cpp:42:
/usr/include/xapian/keymaker.h:64:10: error: a template-id may not appear in a using-declaration
/usr/include/xapian/keymaker.h: In member function ‘void Xapian::MultiValueKeyMaker::add_value(Xapian::valueno, bool)’:
/usr/include/xapian/keymaker.h:77:7: error: expected primary-expression before ‘.’ token
/usr/include/xapian/keymaker.h: At global scope:
/usr/include/xapian/keymaker.h:110:10: error: a template-id may not appear in a using-declaration
/usr/include/xapian/keymaker.h: In member function ‘void Xapian::MultiValueSorter::add(Xapian::valueno, bool)’:
/usr/include/xapian/keymaker.h:123:7: error: expected primary-expression before ‘.’ token
make[2]: *** [src/CMakeFiles/qapt.dir/backend.o] Error 1
make[1]: *** [src/CMakeFiles/qapt.dir/all] Error 2
make: *** [all] Error 2
root@aptosidbox:/home/mte90/Desktop/muon/libqapt# 

Reproducible: Always

Steps to Reproduce:
downloaded by git and try to compile

Actual Results:  
error on cimpiling

Expected Results:  
the correct compiling
Comment 1 Jonathan Thomas 2011-08-13 15:36:33 UTC
This is an error with the xapian library headers. I would recommend filing a bug against xapian in Debian.
Comment 2 Jonathan Thomas 2011-09-11 17:19:21 UTC
*** Bug 281811 has been marked as a duplicate of this bug. ***
Comment 3 Jonathan Thomas 2011-11-06 21:26:33 UTC
Git commit 88a1292e56cfaf72e417fcbca5ee6efaa31388af by Jonathan Thomas.
Committed on 06/11/2011 at 22:24.
Pushed by jmthomas into branch '1.2'.

Fix build with newer versions of Xapian.

More recent versions of Xapian have a class with a member variable called "slots".
This conflicts with a macro that Qt defines also called slots. We are already using
the safer Q_SLOTS macro in LibQApt, but we still need to #undef slots, since Qt
declares the macro whether we use it or not.

BUG:280024
FIXED-IN:1.2.3

M  +1    -0    src/backend.cpp

http://commits.kde.org/libqapt/88a1292e56cfaf72e417fcbca5ee6efaa31388af
Comment 4 Jonathan Thomas 2011-11-06 21:26:33 UTC
Git commit 6a044e589d2db327be3b707e14542e989be42299 by Jonathan Thomas.
Committed on 06/11/2011 at 22:24.
Pushed by jmthomas into branch 'master'.

Fix build with newer versions of Xapian.

More recent versions of Xapian have a class with a member variable called "slots".
This conflicts with a macro that Qt defines also called slots. We are already using
the safer Q_SLOTS macro in LibQApt, but we still need to #undef slots, since Qt
declares the macro whether we use it or not.

BUG:280024
FIXED-IN:1.2.3

M  +1    -0    src/backend.cpp

http://commits.kde.org/libqapt/6a044e589d2db327be3b707e14542e989be42299